--- a/data/memory/projects/Aurora-X/project_memory.json
+++ b/data/memory/projects/Aurora-X/project_memory.json
@@ -224,6 +224,23 @@
       "value": "Aurora-X Ultra test value",
       "category": "test",
       "timestamp": "2025-12-30T03:58:12.622407"
+    },
+    "interaction_1767127019291": {
+      "value": {
+        "userInput": "analyze my pc and give me a list of things that isn't running properly",
+        "response": "Upon careful analysis of 'analyze my pc and give me a list of things that isn't running properly...', I observe several key aspects worth considering. The quantum coherence of this system enables deeper pattern recognition. Current system coherence level: 1.00",
+        "intent": {
+          "action": "reflect",
+          "confidence": 0.75,
+          "quantum_state": "stable",
+          "query": null,
+          "spec": null,
+          "topic": "analyze my pc and give me a list of things that isn't running properly"
+        },
+        "timestamp": 1767127019291
+      },
+      "category": "conversation",
+      "timestamp": "2025-12-30T15:36:59.301642"
     }
   },
   "summary": ""
