--- a/.github/workflows/aurora-e2e.yml
+++ b/.github/workflows/aurora-e2e.yml
@@ -1,37 +1,24 @@
 name: Aurora-X E2E Tests (strict)
-
 on:
   workflow_dispatch:
   pull_request:
     branches: [ main ]
   push:
     branches: [ main ]
-
 env:
   HOST: http://127.0.0.1:8000
   PORT: 8000
   AURORA_TOKEN_SECRET: ci-test-secret
-
 jobs:
   e2e:
     runs-on: ubuntu-latest
     timeout-minutes: 20
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-          cache: "pip"
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "npm"
-
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with: { python-version: "3.11", cache: "pip" }
+      - uses: actions/setup-node@v4
+        with: { node-version: "20", cache: "npm" }
       - name: Install Python deps
         run: |
           python -m pip install --upgrade pip
@@ -40,74 +27,25 @@ jobs:
           else
             pip install fastapi uvicorn httpx pytest
           fi
-
       - name: Install Node deps (if client/ exists)
         run: |
           if [ -d "./client" ]; then
             cd client
-            if [ -f package-lock.json ]; then
-              npm ci
-            else
-              npm install
-            fi
+            if [ -f package-lock.json ]; then npm ci; else npm install; fi
           fi
-
       - name: Build client (if present)
         run: |
-          if [ -d "./client" ]; then
-            cd client
-            npm run build --if-present
-          fi
-
+          if [ -d "./client" ]; then cd client; npm run build --if-present; fi
       - name: Launch API
         run: |
           uvicorn aurora_x.serve:app --host 127.0.0.1 --port 8000 --log-level warning &
           echo $! > /tmp/aurora.pid
-
       - name: Wait for API
         run: |
           timeout 30 bash -c 'until curl -fsS "$HOST/healthz"; do sleep 1; done'
-
       - name: Run tests
         run: pytest -q
-
       - name: Teardown
         if: always()
         run: |
-          if [ -f /tmp/aurora.pid ]; then
-            kill $(cat /tmp/aurora.pid) 2>/dev/null || true
-          fi
-
-  e2e-docker-arm64:
-    runs-on: ubuntu-latest
-    timeout-minutes: 25
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build ARM64 image
-        run: |
-          docker buildx build             --platform linux/arm64             -f Dockerfile.e2e             -t aurora-e2e:arm64             --load             .
-
-      - name: Run ARM64 container
-        run: docker run -d --name aurora-arm -p 8000:8000 aurora-e2e:arm64
-
-      - name: Wait for container
-        run: |
-          timeout 30 bash -c 'until curl -fsS "$HOST/healthz"; do sleep 1; done'
-
-      - name: Container smoke test
-        run: |
-          curl -fsS "$HOST/healthz"
-          curl -fsS -X POST -H 'content-type: application/json'             -d '{"prompt":"add two numbers","lang":"python"}' "$HOST/chat" || true
-
-      - name: Cleanup
-        if: always()
-        run: |
-          docker stop aurora-arm 2>/dev/null || true
-          docker rm aurora-arm 2>/dev/null || true
+          if [ -f /tmp/aurora.pid ]; then kill $(cat /tmp/aurora.pid) 2>/dev/null || true; fi
