--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "check": "tsc",
     "test": "jest --runInBand --passWithNoTests",
     "db:push": "drizzle-kit push",
-    "server": "tsx server/index.ts"
+    "server": "tsx server/index.ts",
+    "lint:js": "eslint . --ext .ts,.tsx,.js",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -60,13 +63,13 @@
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
     "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.1",
-    "dotenv": "^16.4.5",
     "framer-motion": "^11.13.1",
     "identity-obj-proxy": "^3.0.0",
     "input-otp": "^1.4.2",
@@ -116,15 +119,21 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
+    "@typescript-eslint/eslint-plugin": "^8.51.0",
+    "@typescript-eslint/parser": "^8.51.0",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
     "cross-env": "^10.1.0",
     "drizzle-kit": "^0.31.8",
     "esbuild": "^0.27.2",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
     "postcss": "^8.4.47",
+    "prettier": "^3.7.4",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
-    "typescript": "5.6.3",
+    "typescript": "^5.9.3",
     "vite": "^7.3.0"
   },
   "overrides": {
