chore(deps): pin Python (pip-tools) and Node lockfiles

--- a/client/package.json
+++ b/client/package.json
@@ -2,5 +2,8 @@
   "name": "aurora-client",
   "version": "1.0.0",
   "private": true,
-  "type": "module"
+  "type": "module",
+  "engines": {
+    "node": "^20"
+  }
 }
