--- a/package.json
+++ b/package.json
@@ -60,13 +60,13 @@
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
     "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.1",
-    "dotenv": "^16.4.5",
     "framer-motion": "^11.13.1",
     "identity-obj-proxy": "^3.0.0",
     "input-otp": "^1.4.2",
@@ -140,5 +140,8 @@
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
+  },
+  "engines": {
+    "node": "^20"
   }
 }
