--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,9 @@ repos:
     rev: v6.0.0
     hooks:
       - id: check-yaml
-        exclude: '^(k8s/|\.aurora/)'
+        require_serial: true
+        files: '^(?:\.github/workflows/.*\.ya?ml|[^/]+\.ya?ml)$'
+        exclude: '^(k8s/|\.aurora/|client/|.*node_modules/)'
       - id: end-of-file-fixer
       - id: trailing-whitespace
 
@@ -14,5 +16,6 @@ repos:
     rev: v0.14.10
     hooks:
       - id: ruff-check
-        args: [--fix, --exit-non-zero-on-fix]
+        args: [--fix]
       - id: ruff-format
+        args: ["--check"]
