fix(lint/#159): CI-safe YAML-only pre-commit; pin py311; normalize YAML EOLs

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,16 +5,9 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v6.0.0
     hooks:
+      # Only check CI YAML and root-level YAML; run serial to avoid hangs
       - id: check-yaml
         require_serial: true
         files: '^(?:\.github/workflows/.*\.ya?ml|[^/]+\.ya?ml)$'
         exclude: '^(k8s/|\.aurora/|client/|.*node_modules/)'
-      - id: end-of-file-fixer
-      - id: trailing-whitespace
 
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.14.10
-    hooks:
-      - id: ruff-check
-      - id: ruff-format
-        args: ["--check"]
