--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,4 +21,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install pre-commit
       - name: Run pre-commit
+        run: |
+          pre-commit run check-yaml --all-files --verbose
         run: pre-commit run --all-files --show-diff-on-failure
