--- a/.github/workflows/aurora-e2e.yml
+++ b/.github/workflows/aurora-e2e.yml
@@ -1,67 +1,41 @@
 name: Aurora-X E2E Tests (strict)
-
 on:
   workflow_dispatch:
-  pull_request:
-    branches: [ vs-code-2 ]
-  push:
-    branches: [ vs-code-2 ]
-
+  pull_request: { branches: [ vs-code-2 ] }
+  push: { branches: [ vs-code-2 ] }
 env:
   HOST: http://127.0.0.1:8000
   PORT: 8000
   AURORA_TOKEN_SECRET: ci-test-secret
-
 jobs:
   e2e:
     runs-on: ubuntu-latest
     timeout-minutes: 20
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-          cache: "pip"
-
+        with: { python-version: "3.11", cache: "pip" }
       - uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "npm"
-
+        with: { node-version: "20", cache: "npm" }
       - name: Install Python deps
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then
-            pip install -r requirements.txt
-          else
-            pip install fastapi uvicorn httpx pytest
-          fi
-
-      - name: Install Node deps (if client/ exists)
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; else pip install fastapi uvicorn httpx pytest; fi
+      - name: Install Node deps (if client/)
         run: |
-          if [ -d "./client" ]; then
-            cd client
-            if [ -f package-lock.json ]; then npm ci; else npm install; fi
-          fi
-
+          if [ -d "./client" ]; then cd client; if [ -f package-lock.json ]; then npm ci; else npm install; fi; fi
       - name: Build client (if present)
         run: |
           if [ -d "./client" ]; then cd client; npm run build --if-present; fi
-
       - name: Launch API
         run: |
           uvicorn aurora_x.serve:app --host 127.0.0.1 --port 8000 --log-level warning &
-          echo $! > /tmp/aurora.pid
-
+          echo \$! > /tmp/aurora.pid
       - name: Wait for API
-        run: |
-          timeout 30 bash -c 'until curl -fsS "$HOST/healthz"; do sleep 1; done'
-
+        run: timeout 30 bash -c 'until curl -fsS "\System.Management.Automation.Internal.Host.InternalHost/healthz"; do sleep 1; done'
       - name: Run tests
         run: pytest -q
-
       - name: Teardown
         if: always()
         run: |
-          if [ -f /tmp/aurora.pid ]; then kill $(cat /tmp/aurora.pid) 2>/dev/null || true; fi
+          if [ -f /tmp/aurora.pid ]; then kill \ 2>/dev/null || true; fi
