--- a/ruff.toml
+++ b/ruff.toml
@@ -1,7 +1,10 @@
 line-length = 100
 target-version = "py311"
-exclude = ["attached_assets", "runs", "backups", ".aurora", "timer_app.py"]
 
 [lint]
-select = ["E", "F", "W", "I", "B", "UP"]
-ignore = ["E203", "E501", "E701", "E702", "E722", "B904", "E402"]
+select = ["E","F","I","UP","B","SIM","W"]
+ignore = []
+
+[format]
+quote-style = "double"
+indent-style = "space"
