ci: fix teardown kill in aurora-e2e

--- a/.github/workflows/aurora-e2e.yml
+++ b/.github/workflows/aurora-e2e.yml
@@ -38,4 +38,4 @@ jobs:
       - name: Teardown
         if: always()
         run: |
-          if [ -f /tmp/aurora.pid ]; then kill \ 2>/dev/null || true; fi
+          if [ -f /tmp/aurora.pid ]; then kill $(cat /tmp/aurora.pid) 2>/dev/null || true; fi
