--- a/.github/workflows/aurora-e2e.yml
+++ b/.github/workflows/aurora-e2e.yml
@@ -1,29 +1,42 @@
 name: Aurora-X E2E Tests (strict)
+
 on:
   workflow_dispatch:
-  pull_request: { branches: [ vs-code-2 ] }
-  push: { branches: [ vs-code-2 ] }
+  pull_request:
+    branches: [ vs-code-2 ]
+  push:
+    branches: [ vs-code-2 ]
+
 env:
   HOST: http://127.0.0.1:8000
   PORT: 8000
   AURORA_TOKEN_SECRET: ci-test-secret
+
 jobs:
   e2e:
     runs-on: ubuntu-latest
-    timeout-minutes: 20
+    timeout-minutes: 25
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
-        with: { python-version: "3.11", cache: "pip" }
-      - uses: actions/setup-node@v4
-        with: { node-version: "20", cache: "npm" }
+        with:
+          python-version: '3.11'
+          cache: 'pip'
       - name: Install Python deps
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; else pip install fastapi uvicorn httpx pytest; fi
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          else
+            pip install fastapi uvicorn httpx pytest
+          fi
+          pip freeze | tail -n +1
       - name: Install Node deps (if client/)
         run: |
-          if [ -d "./client" ]; then cd client; if [ -f package-lock.json ]; then npm ci; else npm install; fi; fi
+          if [ -d "./client" ]; then
+            cd client
+            if [ -f package-lock.json ]; then npm ci; else npm install; fi
+          fi
       - name: Build client (if present)
         run: |
           if [ -d "./client" ]; then cd client; npm run build --if-present; fi
@@ -32,7 +45,7 @@ jobs:
           bash scripts/ci-start.sh || (echo '=== ci-start failed ===' && exit 1)
       - name: Wait for API
         run: |
-          for i in {1..90}; do
+          for i in {1..120}; do
             if curl -fsS "$HOST/healthz" >/dev/null 2>&1; then exit 0; fi
             sleep 1
           done
