--- a/.github/workflows/aurora-e2e.yml
+++ b/.github/workflows/aurora-e2e.yml
@@ -15,20 +15,13 @@ env:
 jobs:
   e2e:
     runs-on: ubuntu-latest
-    timeout-minutes: 20
+    timeout-minutes: 25
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
-          cache: "pip"
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "npm"
-
+          python-version: '3.11'
+          cache: 'pip'
       - name: Install Python deps
         run: |
           python -m pip install --upgrade pip
@@ -37,31 +30,34 @@ jobs:
           else
             pip install fastapi uvicorn httpx pytest
           fi
-
-      - name: Install Node deps (if client/ exists)
+          pip freeze | tail -n +1
+      - name: Install Node deps (if client/)
         run: |
           if [ -d "./client" ]; then
             cd client
             if [ -f package-lock.json ]; then npm ci; else npm install; fi
           fi
-
       - name: Build client (if present)
         run: |
           if [ -d "./client" ]; then cd client; npm run build --if-present; fi
-
       - name: Launch API
         run: |
-          uvicorn aurora_x.serve:app --host 127.0.0.1 --port 8000 --log-level warning &
-          echo $! > /tmp/aurora.pid
-
+          bash scripts/ci-start.sh || (echo '=== ci-start failed ===' && exit 1)
       - name: Wait for API
         run: |
-          timeout 30 bash -c 'until curl -fsS "$HOST/healthz"; do sleep 1; done'
-
+          for i in {1..120}; do
+            if curl -fsS "$HOST/healthz" >/dev/null 2>&1; then exit 0; fi
+            sleep 1
+          done
+          echo '=== /tmp/aurora.log (tail) ==='
+          tail -n 200 /tmp/aurora.log || true
+          echo '=== target ==='
+          cat /tmp/aurora.target || true
+          exit 124
       - name: Run tests
         run: pytest -q
-
       - name: Teardown
         if: always()
         run: |
+          echo '=== /tmp/aurora.log (last 200) ===' && tail -n 200 /tmp/aurora.log || true
           if [ -f /tmp/aurora.pid ]; then kill $(cat /tmp/aurora.pid) 2>/dev/null || true; fi
