--- a/docker/Dockerfile.e2e
+++ b/docker/Dockerfile.e2e
@@ -1,30 +1,14 @@
 # syntax=docker/dockerfile:1
 FROM python:3.11-slim
-
-ENV PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1 \
-    PIP_NO_CACHE_DIR=1 \
-    AURORA_ALLOW_MISSING_SECRETS=1 \
-    AURORA_TOKEN_SECRET=ci-test-secret
-
+ENV PYTHONDONTWRITEBYTECODE=1 PYTHONUNBUFFERED=1
 WORKDIR /app
 
-# Minimal system deps
-RUN apt-get update && apt-get install -y --no-install-recommends curl && \
-    rm -rf /var/lib/apt/lists/*
-
-# Install python deps if provided, otherwise minimal runtime deps
-COPY requirements.txt* /tmp/
+# Keep it deterministic & small; install only what we need for health check.
 RUN python -m pip install --upgrade pip && \
-    if [ -f /tmp/requirements.txt ]; then \
-        pip install -r /tmp/requirements.txt; \
-    else \
-        pip install fastapi uvicorn; \
-    fi
+    pip install --no-cache-dir fastapi uvicorn
 
-# App code + entrypoint
+# Bring in the app
 COPY . /app
-COPY docker/start.py /start.py
 
 EXPOSE 8000
-CMD ["python","/start.py"]
+CMD ["uvicorn","aurora_x.serve:app","--host","0.0.0.0","--port","8000","--log-level","warning"]
