--- a/.github/workflows/aurora-e2e.yml
+++ b/.github/workflows/aurora-e2e.yml
@@ -37,7 +37,7 @@ jobs:
           uvicorn aurora_x.serve:app --host 127.0.0.1 --port 8000 --log-level warning &
           echo \$! > /tmp/aurora.pid
       - name: Wait for API
-        run: timeout 30 bash -c 'until curl -fsS "\System.Management.Automation.Internal.Host.InternalHost/healthz"; do sleep 1; done'
+        run: timeout 30 bash -c 'until curl -fsS "$HOST/healthz"; do sleep 1; done'
       - name: Run tests
         run: pytest -q
       - name: Teardown
