Copilot/accept dependabot changes (#191)
* Chore/linting vscode2c (#173)

* Enhance error handling and fallback responses in AuroraAI and AuroraXCore; update Python service commands for flexibility

* Implement chat message processing and routing in AuroraChatInterface; add synthesis, analyze, and fix endpoints in attach_bridge; update requirements for PostgreSQL support; log daily improvements; initialize launcher PIDs file.

* Refactor launcher PIDs, enhance evolution log with daily entries, implement splash screen component, add hardware info API endpoint, and update package dependencies

* Refactor App component structure and improve splash screen functionality

* chore: remove unused pip dependency and update drizzle-kit to version 0.31.8

* chore: update esbuild to version 0.27.2 and add overrides for compatibility

* chore: remove esbuild override from package.json

* Refactor application startup process, enhance health check mechanism, and improve splash screen status messaging

* Refactor module loading messages and update launcher PIDs for consistency

* Refactor module path handling and enhance module loading logic to support multiple module banks

* Refactor code structure for improved readability and maintainability

* Enhance chat handling to intercept name queries and respond with personalized messages

* Update launcher PIDs, enhance intelligence logging, and refine project memory structure for improved system analysis

* Implement proactive system enhancement handling and resource health checks in chat responses

* Refactor launcher PIDs, enhance intelligence logging, and update project memory structure for improved system analysis and user interaction

* Enhance performance monitoring and user interaction by implementing proactive system checks and refining chat response handling

* Update launcher PIDs, enhance intelligence logging, and refine project memory structure for improved system analysis and user interaction

* Refactor launcher PIDs, enh

--- a/.github/workflows/aurora-e2e.yml
+++ b/.github/workflows/aurora-e2e.yml
@@ -12,17 +12,15 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 20
     steps:
-      - uses: actions/checkout@v6
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v6
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
           cache: "pip"
 
       - uses: actions/setup-node@v6
-        with:
-          node-version: "20"
-          cache: "npm"
+        with: { node-version: "20", cache: "npm" }
 
       - name: Install Python deps
         run: |
@@ -39,7 +37,7 @@ jobs:
           uvicorn aurora_x.serve:app --host 127.0.0.1 --port 8000 --log-level warning &
           echo \$! > /tmp/aurora.pid
       - name: Wait for API
-        run: timeout 30 bash -c 'until curl -fsS "\System.Management.Automation.Internal.Host.InternalHost/healthz"; do sleep 1; done'
+        run: timeout 30 bash -c 'until curl -fsS "$HOST/healthz"; do sleep 1; done'
       - name: Run tests
         run: pytest -q
       - name: Teardown
