--- a/.github/workflows/aurora-e2e.yml
+++ b/.github/workflows/aurora-e2e.yml
@@ -33,14 +33,13 @@ jobs:
           if [ -d "./client" ]; then cd client; npm run build --if-present; fi
       - name: Launch API
         run: |
-          uvicorn aurora_x.serve:app --host 127.0.0.1 --port 8000 --log-level warning &
-          echo \$! > /tmp/aurora.pid
-      - name: Wait for API
+          bash scripts/ci-start.sh || (echo '=== ci-start failed ==='; exit 1)      - name: Wait for API
         run: timeout 180 bash -c 'until curl -fsS "$HOST/healthz"; do sleep 1; done'      - name: Run tests
         run: pytest -q
       - name: Teardown
         if: always()
         run: |
-          if [ -f /tmp/aurora.pid ]; then kill $(cat /tmp/aurora.pid) 2>/dev/null || true; fi
-
+          echo '=== /tmp/aurora.log (last 200) ===' && tail -n 200 /tmp/aurora.log || true
+          PIDFILE=/tmp/aurora.pid
+          if [ -f "$PIDFILE" ]; then kill "$(cat "$PIDFILE")" 2>/dev/null || true; fi
 
