--- a/.github/workflows/aurora-e2e.yml
+++ b/.github/workflows/aurora-e2e.yml
@@ -20,7 +20,6 @@ jobs:
 
       - uses: actions/setup-node@v6
         with: { node-version: "20", cache: "npm" }
-
       - name: Install Python deps
         run: |
           python -m pip install --upgrade pip
@@ -34,7 +33,8 @@ jobs:
       - name: Launch API
         run: |
           bash scripts/ci-start.sh || (echo '=== ci-start failed ==='; exit 1)      - name: Wait for API
-        run: timeout 180 bash -c 'until curl -fsS "$HOST/healthz"; do sleep 1; done'      - name: Run tests
+        run: timeout 180 bash -c 'until curl -fsS "$HOST/healthz"; do sleep 1; done'
+      - name: Run tests
         run: pytest -q
       - name: Teardown
         if: always()
@@ -51,3 +51,4 @@ jobs:
             /tmp/aurora.log
             /tmp/aurora.target
           if-no-files-found: ignore
+
