--- a/.github/workflows/aurora-e2e.yml
+++ b/.github/workflows/aurora-e2e.yml
@@ -1,4 +1,4 @@
-name: Aurora-X E2E Tests (strict)
+﻿name: Aurora-X E2E Tests (strict)
 on:
   workflow_dispatch:
   pull_request: { branches: [vs-code-2] }
@@ -19,23 +19,29 @@ jobs:
           cache: "pip"
 
       - uses: actions/setup-node@v6
-        with: { node-version: "20", cache: "npm" }`r`n`r`n`r`n`r`n      - name: Install Python deps
+        with: { node-version: "20", cache: "npm" }`r`n`r`n`r`n`r`n
+      - name: Install Python deps
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; else pip install fastapi uvicorn httpx pytest; fi`r`n`r`n`r`n`r`n      - name: Install Node deps (if client/)
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; else pip install fastapi uvicorn httpx pytest; fi`r`n`r`n`r`n`r`n
+      - name: Install Node deps (if client/)
         run: |
-          if [ -d "./client" ]; then cd client; if [ -f package-lock.json ]; then npm ci; else npm install; fi; fi`r`n`r`n`r`n`r`n      - name: Build client (if present)
+          if [ -d "./client" ]; then cd client; if [ -f package-lock.json ]; then npm ci; else npm install; fi; fi`r`n`r`n`r`n`r`n
+      - name: Build client (if present)
         run: |
-          if [ -d "./client" ]; then cd client; npm run build --if-present; fi`r`n`r`n`r`n`r`n      - name: Launch API
+          if [ -d "./client" ]; then cd client; npm run build --if-present; fi`r`n`r`n`r`n`r`n
+      - name: Launch API
         run: |
-          bash scripts/ci-start.sh || (echo '=== ci-start failed ==='; exit 1)`r`n`r`n`r`n`r`n      - name: Wait for API
-        run: timeout 180 bash -c 'until curl -fsS "$HOST/healthz"; do sleep 1; done'`r`n`r`n`r`n`r`n      - name: Run tests
-        run: pytest -q`r`n`r`n`r`n`r`n      - name: Teardown
+          bash scripts/ci-start.sh || (echo '=== ci-start failed ==='; exit 1)      - name: Wait for API
+        run: timeout 180 bash -c 'until curl -fsS "$HOST/healthz"; do sleep 1; done'`r`n`r`n`r`n`r`n
+      - name: Run tests
+        run: pytest -q`r`n`r`n`r`n`r`n
+      - name: Teardown
         if: always()
         run: |
           echo '=== /tmp/aurora.log (last 200) ===' && tail -n 200 /tmp/aurora.log || true
           PIDFILE=/tmp/aurora.pid
-          if [ -f "$PIDFILE" ]; then kill "$(cat "$PIDFILE")" 2>/dev/null || true; fi`r`n`r`n`r`n`r`n      - name: Upload logs
+          if [ -f "$PIDFILE" ]; then kill "$(cat "$PIDFILE")" 2>/dev/null || true; fi      - name: Upload logs
         if: always()
         uses: actions/upload-artifact@v4
         with:
@@ -43,7 +49,8 @@ jobs:
           path: |
             /tmp/aurora.log
             /tmp/aurora.target
-          if-no-files-found: ignore`r`n      - name: Upload logs
+          if-no-files-found: ignore`r`n
+      - name: Upload logs
         if: always()
         uses: actions/upload-artifact@v4
         with:
@@ -52,7 +59,6 @@ jobs:
             /tmp/aurora.log
             /tmp/aurora.target
           if-no-files-found: ignore
-
       - name: Ensure log files exist
         if: always()
         run: |
@@ -67,4 +73,5 @@ jobs:
             /tmp/aurora.log
             /tmp/aurora.target
           if-no-files-found: warn
+
 
