--- a/.github/workflows/aurora-e2e.yml
+++ b/.github/workflows/aurora-e2e.yml
@@ -1,4 +1,4 @@
-﻿name: Aurora-X E2E Tests (strict)
+name: Aurora-X E2E Tests (strict)
 on:
   workflow_dispatch:
   pull_request: { branches: [vs-code-2] }
@@ -73,6 +73,7 @@ jobs:
             /tmp/aurora.log
             /tmp/aurora.target
           if-no-files-found: warn
+
 
 
 
