ci: add header comment to e2e workflow

--- a/.github/workflows/aurora-e2e.yml
+++ b/.github/workflows/aurora-e2e.yml
@@ -1,5 +1,6 @@
 # Aurora E2E workflow - fixed and tested
 # Aurora E2E workflow - fixed and tested
+# Aurora E2E workflow - fixed and tested
 name: e2e
 
 on:
