--- a/.github/workflows/aurora-e2e.yml
+++ b/.github/workflows/aurora-e2e.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Wait for API
         env:
           HOST: http://127.0.0.1:8000
-        run: timeout 60 bash -c 'until curl -fsS "$HOST/healthz"; do sleep 1; done'
+        run: timeout 90 bash -c 'until curl -fsS "$HOST/healthz"; do sleep 1; done'
 
       - name: Run tests
         env:
@@ -72,4 +72,4 @@ PY
           path: |
             /tmp/aurora.log
             /tmp/aurora.target
-          if-no-files-found: ignore
+          if-no-files-found: warn
