--- a/.github/workflows/aurora-e2e.yml
+++ b/.github/workflows/aurora-e2e.yml
@@ -1,7 +1,9 @@
 name: e2e
 
 on:
-  pull_request:
+  push:
+    branches: [ vs-code-2 ]
+pull_request:
     branches: [ main ]
   workflow_dispatch:
 
@@ -73,3 +75,4 @@ PY
             /tmp/aurora.log
             /tmp/aurora.target
           if-no-files-found: warn
+
