--- a/.github/workflows/aurora-e2e.yml
+++ b/.github/workflows/aurora-e2e.yml
@@ -1,9 +1,7 @@
 name: e2e
 
 on:
-  push:
-    branches: [ vs-code-2 ]
-pull_request:
+  pull_request:
     branches: [ main ]
   workflow_dispatch:
 
@@ -46,7 +44,7 @@ jobs:
       - name: Wait for API
         env:
           HOST: http://127.0.0.1:8000
-        run: timeout 90 bash -c 'until curl -fsS "$HOST/healthz"; do sleep 1; done'
+        run: timeout 60 bash -c 'until curl -fsS "$HOST/healthz"; do sleep 1; done'
 
       - name: Run tests
         env:
@@ -74,5 +72,4 @@ PY
           path: |
             /tmp/aurora.log
             /tmp/aurora.target
-          if-no-files-found: warn
-
+          if-no-files-found: ignore
