Complete universal x-start - fully autonomous self-analyzing and self-configuring startup

--- a/data/memory/projects/Aurora-Main/project_memory.json
+++ b/data/memory/projects/Aurora-Main/project_memory.json
@@ -24,6 +24,26 @@
       "role": "user",
       "content": "I understand your request. Let me help you with that.",
       "timestamp": "2026-01-10T05:50:36.881449"
+    },
+    {
+      "role": "user",
+      "content": "hey aurora analyze the system",
+      "timestamp": "2026-01-10T18:51:43.469327"
+    },
+    {
+      "role": "user",
+      "content": "Upon careful analysis of 'hey aurora analyze the system...', I observe several key aspects worth considering. The quantum coherence of this system enables deeper pattern recognition. Current system coherence level: 1.00",
+      "timestamp": "2026-01-10T18:51:44.175945"
+    },
+    {
+      "role": "user",
+      "content": "okay what are the recommendations?",
+      "timestamp": "2026-01-10T18:53:10.892273"
+    },
+    {
+      "role": "user",
+      "content": "I understand your request. Let me help you with that.",
+      "timestamp": "2026-01-10T18:53:11.148055"
     }
   ],
   "mid_term": [
@@ -1936,6 +1956,60 @@
         "type": "shortterm"
       },
       "stored_at": "2026-01-10T05:50:36.902508"
+    },
+    "memory_fdb26960-8cb5-43e1-805f-9487a363793e": {
+      "value": {
+        "text": "hey aurora analyze the system",
+        "meta": {
+          "session_id": "chat-1768089091629",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2026-01-10T18:51:43.530220",
+        "type": "shortterm"
+      },
+      "stored_at": "2026-01-10T18:51:43.530248"
+    },
+    "memory_a8588ea7-a95c-4ee4-9bf7-9d9cee3cb280": {
+      "value": {
+        "text": "Upon careful analysis of 'hey aurora analyze the system...', I observe several key aspects worth considering. The quantum coherence of this system enables deeper pattern recognition. Current system coherence level: 1.00",
+        "meta": {
+          "session_id": "chat-1768089091629",
+          "client": "web",
+          "type": "aurora_response",
+          "detection": "aurora_ai"
+        },
+        "timestamp": "2026-01-10T18:51:44.210841",
+        "type": "shortterm"
+      },
+      "stored_at": "2026-01-10T18:51:44.210873"
+    },
+    "memory_f8e99dc2-3efd-46ba-b998-5d45ad6c646b": {
+      "value": {
+        "text": "okay what are the recommendations?",
+        "meta": {
+          "session_id": "chat-1768089091629",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2026-01-10T18:53:10.920288",
+        "type": "shortterm"
+      },
+      "stored_at": "2026-01-10T18:53:10.920317"
+    },
+    "memory_8826c6a0-0d3f-4e1a-b417-81c9ed027547": {
+      "value": {
+        "text": "I understand your request. Let me help you with that.",
+        "meta": {
+          "session_id": "chat-1768089091629",
+          "client": "web",
+          "type": "aurora_response",
+          "detection": "aurora_ai"
+        },
+        "timestamp": "2026-01-10T18:53:11.191010",
+        "type": "shortterm"
+      },
+      "stored_at": "2026-01-10T18:53:11.191047"
     }
   },
   "events": [
@@ -3308,6 +3382,46 @@
         "longterm": false
       },
       "timestamp": "2026-01-10T05:50:36.917606"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "fdb26960-8cb5-43e1-805f-9487a363793e",
+        "text_length": 29,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2026-01-10T18:51:43.552437"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "a8588ea7-a95c-4ee4-9bf7-9d9cee3cb280",
+        "text_length": 219,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2026-01-10T18:51:44.230229"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "f8e99dc2-3efd-46ba-b998-5d45ad6c646b",
+        "text_length": 34,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2026-01-10T18:53:10.944675"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "8826c6a0-0d3f-4e1a-b417-81c9ed027547",
+        "text_length": 53,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2026-01-10T18:53:11.224044"
     }
   ],
   "semantic_index": {
@@ -3319,5 +3433,5 @@
       "compressed_at": "2025-12-30T01:34:48.996772"
     }
   },
-  "last_updated": "2026-01-10T05:50:36.918110"
+  "last_updated": "2026-01-10T18:53:11.225014"
 }
