Fix: Return actual response instead of queue confirmation in /api/process

--- a/data/memory/projects/Aurora-Main/project_memory.json
+++ b/data/memory/projects/Aurora-Main/project_memory.json
@@ -34,6 +34,16 @@
       "role": "user",
       "content": "Request queued: aurora i need you to create a Ai-native os. Nexus V3 is processing with 300 workers.",
       "timestamp": "2026-01-19T11:15:18.865850"
+    },
+    {
+      "role": "user",
+      "content": "create a Ai-native os ",
+      "timestamp": "2026-01-19T11:25:38.540958"
+    },
+    {
+      "role": "user",
+      "content": "Request queued: create a Ai-native os . Nexus V3 is processing with 300 workers.",
+      "timestamp": "2026-01-19T11:25:40.291183"
     }
   ],
   "mid_term": [
@@ -2115,6 +2125,33 @@
         "type": "shortterm"
       },
       "stored_at": "2026-01-19T11:15:18.903353"
+    },
+    "memory_8594ee70-7555-44d0-a768-ce0389951be6": {
+      "value": {
+        "text": "create a Ai-native os ",
+        "meta": {
+          "session_id": "chat-1768839925131",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2026-01-19T11:25:38.620588",
+        "type": "shortterm"
+      },
+      "stored_at": "2026-01-19T11:25:38.620610"
+    },
+    "memory_ea40b8c5-ad93-4f7c-a96e-989ab6d8e473": {
+      "value": {
+        "text": "Request queued: create a Ai-native os . Nexus V3 is processing with 300 workers.",
+        "meta": {
+          "session_id": "chat-1768839925131",
+          "client": "web",
+          "type": "aurora_response",
+          "detection": "aurora_ai"
+        },
+        "timestamp": "2026-01-19T11:25:40.321484",
+        "type": "shortterm"
+      },
+      "stored_at": "2026-01-19T11:25:40.321510"
     }
   },
   "events": [
@@ -3607,6 +3644,26 @@
         "longterm": false
       },
       "timestamp": "2026-01-19T11:15:18.930621"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "8594ee70-7555-44d0-a768-ce0389951be6",
+        "text_length": 22,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2026-01-19T11:25:38.647245"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "ea40b8c5-ad93-4f7c-a96e-989ab6d8e473",
+        "text_length": 80,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2026-01-19T11:25:40.344908"
     }
   ],
   "semantic_index": {
@@ -3618,5 +3675,5 @@
       "compressed_at": "2025-12-30T01:34:48.996772"
     }
   },
-  "last_updated": "2026-01-19T11:15:18.931310"
+  "last_updated": "2026-01-19T11:25:40.346347"
 }
